--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 													The strategy includes debt restructuring for over 18 months. Under the plan, existing shareholders would contribute $750.6 million. #richardbranson 's Virgin Group would contribute $262 million and hedge fund Davidson Kempner would provide $188 million.</p>
 												<footer>
 													<a href="#" class="love"><i class="ion-android-favorite-outline"></i> <div>1263</div></a>
-													<a class="btn btn-primary more" href="#">
+													<a class="btn btn-primary more" href="articles/article.html">
 														<div>More</div>
 														<div><i class="ion-ios-arrow-thin-right"></i></div>
 													</a>
@@ -319,7 +319,7 @@
 													The strategy includes debt restructuring for over 18 months. Under the plan, existing shareholders would contribute $750.6 million. #richardbranson 's Virgin Group would contribute $262 million and hedge fund Davidson Kempner would provide $188 million.</p>
 												<footer>
 													<a href="#" class="love"><i class="ion-android-favorite-outline"></i> <div>1263</div></a>
-													<a class="btn btn-primary more" href="#">
+													<a class="btn btn-primary more" href="articles/article1.html">
 														<div>More</div>
 														<div><i class="ion-ios-arrow-thin-right"></i></div>
 													</a>
@@ -348,7 +348,7 @@
 													The strategy includes debt restructuring for over 18 months. Under the plan, existing shareholders would contribute $750.6 million. #richardbranson 's Virgin Group would contribute $262 million and hedge fund Davidson Kempner would provide $188 million.</p>
 												<footer>
 													<a href="#" class="love"><i class="ion-android-favorite-outline"></i> <div>1263</div></a>
-													<a class="btn btn-primary more" href="#">
+													<a class="btn btn-primary more" href="articles/article2.html">
 														<div>More</div>
 														<div><i class="ion-ios-arrow-thin-right"></i></div>
 													</a>
@@ -373,7 +373,7 @@
 													The strategy includes debt restructuring for over 18 months. Under the plan, existing shareholders would contribute $750.6 million. #richardbranson 's Virgin Group would contribute $262 million and hedge fund Davidson Kempner would provide $188 million.</p>
 												<footer>
 													<a href="#" class="love"><i class="ion-android-favorite-outline"></i> <div>1263</div></a>
-													<a class="btn btn-primary more" href="#">
+													<a class="btn btn-primary more" href="articles/article3.html">
 														<div>More</div>
 														<div><i class="ion-ios-arrow-thin-right"></i></div>
 													</a>
