navbar and article page fixes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 													<li><a href="#">FMCG</a></li>
 													<li><a href="#">FMCD</a></li>
-													<li><a href="#">Automobile</a></li>
+													<li><a href="articles/automobile.html">Automobile</a></li>
 													<li><a href="#">Pharmaceutical</a></li>
 												</ul>
 											</div>
