adding roles and article fix

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 											<div class="col-md-3">
 												<h2 class="megamenu-title">Human Resources</h2>
 												<ul class="vertical-menu">
-													<li><a href="#">Executive HR</a></li>
+													<li><a href="roles/executivehr.html">Executive HR</a></li>
 													<li><a href="#">HR Supervisor</a></li>
 													<li><a href="#">HR Specialist</a></li>
 													<li><a href="#">Employee Relations Manager</a></li>
