--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
 												<h2 class="megamenu-title">Human Resources</h2>
 												<ul class="vertical-menu">
 													<li><a href="roles/executivehr.html">Executive HR</a></li>
-													<li><a href="#">HR Supervisor</a></li>
-													<li><a href="#">HR Specialist</a></li>
-													<li><a href="#">Employee Relations Manager</a></li>
-													<li><a href="#">HR Administrator</a></li>
-													<li><a href="#">HR Technical Supervisor</a></li>
+													<li><a href="roles/hrsupervisor.html">HR Supervisor</a></li>
+													<li><a href="roles/hrspecialist.html">HR Specialist</a></li>
+													<li><a href="roles/employeerelationsmanager.html">Employee Relations Manager</a></li>
+													<li><a href="roles/hradministrator.html">HR Administrator</a></li>
+													<li><a href="hrtechnichalsupervisor.html">HR Technical Supervisor</a></li>
 
 												</ul>
 											</div>
