--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 										<div class="inner">
 											<figure>
 												<a href="#">
-													<img src="images/suicide.png" alt="Sample Article">
+													<img src="images/suicide.jpg" alt="Sample Article">
 												</a>
 											</figure>
 											<div class="padding">
@@ -330,7 +330,7 @@
 										<div class="inner">
 											<figure>
 												<a href="#">
-													<img src="images/taleb.png" alt="Sample Article">
+													<img src="images/taleb.jpg" alt="Sample Article">
 												</a>
 											</figure>
 											<div class="padding">
@@ -459,7 +459,7 @@
 									<div class="inner">
 										<figure>
 											<a href="articles/article3.html">
-												<img src="images/suicide.png" alt="Sample Article">
+												<img src="images/suicide.jpg" alt="Sample Article">
 											</a>
 										</figure>
 										<div class="padding">
@@ -485,7 +485,7 @@
 									<div class="inner">
 										<figure>
 											<a href="articles/article4.html">
-												<img src="images/taleb.png" alt="Sample Article">
+												<img src="images/taleb.jpg" alt="Sample Article">
 											</a>
 										</figure>
 										<div class="padding">
