--- a/index.html
+++ b/index.html
@@ -227,7 +227,6 @@
 													<li><a href="#">IIM Ahmedabad</a></li>
 													<li><a href="#">IIM Bangalore</a></li>
 													<li><a href="#">IIM Calcutta</a></li>
-													<li><a href="#">IIM Indore</a></li>
 												</ul>
 											</div>
 											<div class="col-md-3">
@@ -236,8 +235,6 @@
 													<li><a href="#">NMIMS Mumbai</a></li>
 													<li><a href="#">MDI Gurgaon</a></li>
 													<li><a href="#">IMT Ghaziabad</a></li>
-													<li><a href="#">Great Lakes, Chennai</a></li>
-													<li><a href="#">IIM Amritsar</a></li>
 												</ul>
 											</div>
 											<div class="col-md-3">
@@ -245,8 +242,15 @@
 													<li><a href="#">Goa Institute of Mangement</a></li>
 													<li><a href="#">IMI Delhi</a></li>
 													<li><a href="#">BIMTECH</a></li>
-													<li><a href="#">Tapmi</a></li>
 													<li><a href="#">IIM Rohtak	</a></li>
+												</ul>
+											</div>
+											<div class="col-md-3">
+												<ul class="vertical-menu">
+													<li><a href="#">IIM Indore</a></li>
+													<li><a href="#">Tapmi</a></li>
+													<li><a href="#">Great Lakes, Chennai</a></li>
+													<li><a href="#">IIM Amritsar</a></li>
 												</ul>
 											</div>
 										</div>
