--- a/roles/hrsupervisor.html
+++ b/roles/hrsupervisor.html
@@ -241,7 +241,7 @@
 												<ul class="vertical-menu">
 													<li><a href="#">Goa Institute of Mangement</a></li>
 													<li><a href="#">IMI Delhi</a></li>
-													<li><a href="#">BIMTECH</a></li>
+													<li><a href="#">IIFT</a></li>
 													<li><a href="#">IIM Rohtak	</a></li>
 												</ul>
 											</div>
