--- a/roles/employeerelationmanager.html
+++ b/roles/employeerelationmanager.html
@@ -331,7 +331,7 @@ ability to provide answers to complex workplace questions</li>
 					<div class="col-xs-6 col-md-4 sidebar" id="sidebar">
 						<div class="sidebar-title for-tablet">Sidebar</div>
 						<aside>
-							<h1 class="aside-title">Popular <a href="#" class="all">See All <i class="ion-ios-arrow-right"></i></a></h1>
+							<h1 class="aside-title">Trending <a href="#" class="all">See All <i class="ion-ios-arrow-right"></i></a></h1>
 							<div class="aside-body">
 								<article class="article-mini">
 									<div class="inner">
