--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 											<div class="col-md-3">
 												<h2 class="megamenu-title">Analaytics</h2>
 												<ul class="vertical-menu">
-													<li><a href="#">Data Analytics</a></li>
+													<li><a href="roles/dataanalyst.html">Data Analytics</a></li>
 													<li><a href="roles/datascientist.html">Data Scientist</a></li>
 													<li><a href="roles/dataengineer.html">Data Engineer</a></li>
 													<li><a href="#">Data Architechture</a></li>
