--- a/index.html
+++ b/index.html
@@ -244,10 +244,6 @@
 
 													<li><a href="articles/bimtech.html">BIMTECH</a></li>
 													<li><a href="articles/iimRohtak.html">IIM Rohtak	</a></li>
-
-													<li><a href="#">IIFT</a></li>
-													<li><a href="#">IIM Rohtak	</a></li>
-
 												</ul>
 											</div>
 											<div class="col-md-3">
@@ -351,6 +347,126 @@
 											</div>
 										</div>
 									</article>
+									<article class="article col-md-12">
+										<div class="inner">
+											<figure>
+												<a href="#">
+													<img src="images/article.jpg" alt="Sample Article">
+												</a>
+											</figure>
+											<div class="padding">
+												<div class="detail">
+													<div class="time">August 16, 2020</div>
+													<div class="category"><a href="#">Entreupreneurship</a></div>
+												</div>
+												<h2><a href="#"> NMIMS Mumbai </a></h2>
+												<p>There was yet another successful placement season at the School Of Business Management, NMIMS Mumbai for 2019-2021 batch. A total of 230 companies participated in this placement season. 53 companies participated in the MBA-HR placements. The most number of offers was made by the BFSI sector. For MBA-HR it was the IT, Analytics, Consulting, Start-Up & E-Commerce sector. This report will cover important highlights from the summer placement report for the MBA and MBA HR batch of 2019-2021 at NMIMS. Read to know more. </p>
+												<footer>
+
+													<a class="btn btn-primary more" href="articles/article4.html">
+														<div>More</div>
+														<div><i class="ion-ios-arrow-thin-right"></i></div>
+													</a>
+												</footer>
+											</div>
+										</div>
+									</article>
+									<article class="article col-md-12">
+										<div class="inner">
+											<figure>
+												<a href="#">
+													<img src="images/article.jpg" alt="Sample Article">
+												</a>
+											</figure>
+											<div class="padding">
+												<div class="detail">
+													<div class="time">August 16, 2020</div>
+													<div class="category"><a href="#">Entreupreneurship</a></div>
+												</div>
+												<h2><a href="#"> IIM Calcutta </a></h2>
+												<p>IM Calcutta has released the final placement report for the MBA Class of 2020! The final placement season for the 55th batch at IIM Calcutta saw participation from 150 recruiters, including McKinsey & Company, Bain & Company, BCG, Goldman Sachs, JP Morgan Chase, Microsoft, Google, AB InBev, HUL and Mondelez among others. The average of the top-50% of all offers stood at INR 34.6 lakhs, while the average of the top-75% of all offers stood at INR 30.9 lakhs. These are important highlights from the IIM Calcutta final placement report for the MBA class of 2020.</p>
+												<footer>
+
+													<a class="btn btn-primary more" href="articles/article4.html">
+														<div>More</div>
+														<div><i class="ion-ios-arrow-thin-right"></i></div>
+													</a>
+												</footer>
+											</div>
+										</div>
+									</article>
+									<article class="article col-md-12">
+										<div class="inner">
+											<figure>
+												<a href="#">
+													<img src="images/article.jpg" alt="Sample Article">
+												</a>
+											</figure>
+											<div class="padding">
+												<div class="detail">
+													<div class="time">August 16, 2020</div>
+													<div class="category"><a href="#">Entreupreneurship</a></div>
+												</div>
+												<h2><a href="#"> IIFT </a></h2>
+												<p>IFT has released the final placement report for the MBA batch of 2020! This final placements season at IIFT was tremendously successful, with 107 recruiters hiring from the institute. Companies like McKinsey & Company, HDFC Bank, and Reckitt Benckiser were first time recruiters at IIFT this placement season. The overall average compensation offered to the batch also saw an increase over the previous year despite a decrease in the highest international CTC. These are important highlights from the IIFT final placement report for the MBA in International Business students from the 2020 batch. </p>
+												<footer>
+
+													<a class="btn btn-primary more" href="articles/article4.html">
+														<div>More</div>
+														<div><i class="ion-ios-arrow-thin-right"></i></div>
+													</a>
+												</footer>
+											</div>
+										</div>
+									</article>
+									<article class="article col-md-12">
+										<div class="inner">
+											<figure>
+												<a href="#">
+													<img src="images/article.jpg" alt="Sample Article">
+												</a>
+											</figure>
+											<div class="padding">
+												<div class="detail">
+													<div class="time">August 16, 2020</div>
+													<div class="category"><a href="#">Entreupreneurship</a></div>
+												</div>
+												<h2><a href="#"> IIM Amritsar </a></h2>
+												<p>IIM Amritsar has successfully concluded the final Placement 2020 for its 4th and larger PGP batch. Not only it has broken its past record and surpassed the salary packages of its third batch but despite the large batch size of close to 100 students, the institute has achieved 100% placement with much higher offers that many well established top MBA colleges have not been able to achieve. </p>
+												<footer>
+
+													<a class="btn btn-primary more" href="articles/article4.html">
+														<div>More</div>
+														<div><i class="ion-ios-arrow-thin-right"></i></div>
+													</a>
+												</footer>
+											</div>
+										</div>
+									</article>
+									<article class="article col-md-12">
+										<div class="inner">
+											<figure>
+												<a href="#">
+													<img src="images/article.jpg" alt="Sample Article">
+												</a>
+											</figure>
+											<div class="padding">
+												<div class="detail">
+													<div class="time">August 16, 2020</div>
+													<div class="category"><a href="#">Entreupreneurship</a></div>
+												</div>
+												<h2><a href="#"> TAPMI </a></h2>
+												<p>Recording yet again higher average salary for its PGDM and PGDM BKFS batch 2018-20, TAPMI Manipal has concluded the final placement for its large batch of 430 students, out of which 5 students have opted out and 423 students have been suitably placed to their dream roles and profiles offered by 102 recruiters.</p>
+												<footer>
+
+													<a class="btn btn-primary more" href="articles/article4.html">
+														<div>More</div>
+														<div><i class="ion-ios-arrow-thin-right"></i></div>
+													</a>
+												</footer>
+											</div>
+										</div>
+									</article>
 								</div>
 							</div>
 							<div class="col-md-6 col-sm-6 col-xs-12">
@@ -403,7 +519,150 @@
 											</div>
 										</div>
 									</article>
+									<article class="article col-md-12">
+										<div class="inner">
+											<figure>
+												<a href="#">
+													<img src="images/article.jpg" alt="Sample Article">
+												</a>
+											</figure>
+											<div class="padding">
+												<div class="detail">
+													<div class="time">August 16, 2020</div>
+													<div class="category"><a href="#">Matrimony</a></div>
+												</div>
+												<h2><a href="#"> ISB </a></h2>
+												<p>The Indian School of Business, one of the finest management institutes in the world, has released final placement statistics for the PGP class of 2020! In 2020, the institute has broken it's own record by recording 1504 offers for the 884 students participating in the placement process - this is the highest number of offers that ISB has seen in the past 5 years and is nearly a 15 percent increase over the previous year. </p>
+												<footer>
 
+													<a class="btn btn-primary more" href="articles/article1.html">
+														<div>More</div>
+														<div><i class="ion-ios-arrow-thin-right"></i></div>
+													</a>
+												</footer>
+											</div>
+										</div>
+									</article>
+									<article class="article col-md-12">
+										<div class="inner">
+											<figure>
+												<a href="#">
+													<img src="images/article.jpg" alt="Sample Article">
+												</a>
+											</figure>
+											<div class="padding">
+												<div class="detail">
+													<div class="time">August 16, 2020</div>
+													<div class="category"><a href="#">Matrimony</a></div>
+												</div>
+												<h2><a href="#"> IIM Ahmedabad </a></h2>
+												<p> IIM Ahmedabad has released the audited summer placement report for it's MBA class of 2021. This year, the IIM A batch received 19 international internship offers, with students obtaining opportunities to work in Australia, France, Singapore and other parts of the world. The Boston Consulting Group was the largest recruiter this summer placement season, extending 23 offers to the batch. This report will cover important highlights from the audited summer placement report for the MBA batch of 2019-2021 at IIM Ahmedabad.</p>
+												<footer>
+
+													<a class="btn btn-primary more" href="articles/article1.html">
+														<div>More</div>
+														<div><i class="ion-ios-arrow-thin-right"></i></div>
+													</a>
+												</footer>
+											</div>
+										</div>
+									</article>
+									<article class="article col-md-12">
+										<div class="inner">
+											<figure>
+												<a href="#">
+													<img src="images/article.jpg" alt="Sample Article">
+												</a>
+											</figure>
+											<div class="padding">
+												<div class="detail">
+													<div class="time">August 16, 2020</div>
+													<div class="category"><a href="#">Matrimony</a></div>
+												</div>
+												<h2><a href="#"> IIM Bangalore </a></h2>
+												<p> The IIM Bangalore final placement report has been released! 432 students of the 2018-2020 MBA batch received a total of 518 offers from top recruiters like Amazon, Bain & Co., BCG, Accenture Strategy, McKinsey & Co., Aditya Birla Group, HUL, and Vodafone, amongst others. The average domestic CTC stood at INR 26.18 LPA, while the average overseas CTC stood at INR 32.10 LPA. These are important highlights from the IIM Bangalore final placement report for the MBA batch of 2020.</p>
+												<footer>
+
+													<a class="btn btn-primary more" href="articles/article1.html">
+														<div>More</div>
+														<div><i class="ion-ios-arrow-thin-right"></i></div>
+													</a>
+												</footer>
+											</div>
+										</div>
+									</article>
+									<article class="article col-md-12">
+										<div class="inner">
+											<figure>
+												<a href="#">
+													<img src="images/article.jpg" alt="Sample Article">
+												</a>
+											</figure>
+											<div class="padding">
+												<div class="detail">
+													<div class="time">August 16, 2020</div>
+													<div class="category"><a href="#">Matrimony</a></div>
+												</div>
+												<h2><a href="#"> IMT Ghaziabad </a></h2>
+												<p> MT Ghaziabad Placements 2019 are breaking the B-school’s past records not only in terms of achieving higher salary packages in domestic market but also getting international offers. The students of one of the premier B-schools in the country, IMT Ghaziabad have received highest international salary package of Rs.57.40 LPA and highest domestic salary package of Rs.27 LPA while the average salary has stood at Rs.12.50 LPA.</p>
+												<footer>
+
+													<a class="btn btn-primary more" href="articles/article1.html">
+														<div>More</div>
+														<div><i class="ion-ios-arrow-thin-right"></i></div>
+													</a>
+												</footer>
+											</div>
+										</div>
+									</article>
+									<article class="article col-md-12">
+										<div class="inner">
+											<figure>
+												<a href="#">
+													<img src="images/article.jpg" alt="Sample Article">
+												</a>
+											</figure>
+											<div class="padding">
+												<div class="detail">
+													<div class="time">August 16, 2020</div>
+													<div class="category"><a href="#">Matrimony</a></div>
+												</div>
+												<h2><a href="#"> IIM Rohtak </a></h2>
+												<p> IM Rohtak placements 2018 concluded with a 16% rise in the highest salary package. The IIM Rohtak final placement report states that over 90 recruiters participated in the IIM Rohtak placements 2018, out of which 40 were the first time recruiters. The top recruiting companies in IIM Rohtak placements are Google, Amazon, Dabur, EY, KPMG, Amul, GMR, Patanjali, Tolaram among others. The IIM Rohtak highest salary package has gone up to Rs.30 lakhs with 100% placement records. </p>
+												<footer>
+
+													<a class="btn btn-primary more" href="articles/article1.html">
+														<div>More</div>
+														<div><i class="ion-ios-arrow-thin-right"></i></div>
+													</a>
+												</footer>
+											</div>
+										</div>
+									</article>
+									<article class="article col-md-12">
+										<div class="inner">
+											<figure>
+												<a href="#">
+													<img src="images/article.jpg" alt="Sample Article">
+												</a>
+											</figure>
+											<div class="padding">
+												<div class="detail">
+													<div class="time">August 16, 2020</div>
+													<div class="category"><a href="#">Matrimony</a></div>
+												</div>
+												<h2><a href="#"> Great Lakes </a></h2>
+												<p> Great Lakes Institute of Management, Chennai has the best placement season ever. The placement process for PGDM and PGPM was successfully concluded with 100% placement. </p>
+												<footer>
+
+													<a class="btn btn-primary more" href="articles/article1.html">
+														<div>More</div>
+														<div><i class="ion-ios-arrow-thin-right"></i></div>
+													</a>
+												</footer>
+											</div>
+										</div>
+									</article>
 								</div>
 							</div>
 
