added ample comp page

--- a/index.html
+++ b/index.html
@@ -686,7 +686,6 @@
 					<div class="col-xs-6 col-md-4 sidebar" id="sidebar">
 						<div class="sidebar-title for-tablet">Sidebar</div>
 						<aside>
-<<<<<<< HEAD
 							<h1 class="aside-title">Competitions<a href="#" class="all">See All <i class="ion-ios-arrow-right"></i></a></h1>
 							<div class="aside-body">
 								<article class="article-mini">
@@ -702,7 +701,7 @@
 										</div>
 										<footer>
 													
-											<a class="btn btn-primary comp_details" style="margin-left: 15px" href="">
+											<a class="btn btn-primary comp_details" style="margin-left: 15px" href="competitions/sample.html">
 													<div class="btn_text">Details</div>
 													<div><i class="ion-ios-arrow-thin-right"></i></div>
 											</a>
@@ -818,10 +817,9 @@
 							</div>
 						</aside>
 						<aside>
-							<h1 class="aside-title">Popular <a href="#" class="all">See All <i class="ion-ios-arrow-right"></i></a></h1>
-=======
+							
 							<h1 class="aside-title">Trending <a href="#" class="all">See All <i class="ion-ios-arrow-right"></i></a></h1>
->>>>>>> de01bd78df17b784318d1ea146145e69a1bbb6aa
+
 							<div class="aside-body">
 								<article class="article-mini">
 									<div class="inner">
